--- a/Common Task/organized/run.ipynb
+++ b/Common Task/organized/run.ipynb
@@ -30,6 +30,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Error: Message: element click intercepted: Element <li class=\"ui-menu-item\" id=\"ui-id-4\" tabindex=\"-1\" role=\"menuitem\">...</li> is not clickable at point (92, 12). Other element would receive the click: <div class=\"toplogo\">...</div>\n",
+      "  (Session info: chrome-headless-shell=123.0.6312.86)\n",
+      "Stacktrace:\n",
+      "\tGetHandleVerifier [0x00007FF6D1FC70C2+63090]\n",
+      "\t(No symbol) [0x00007FF6D1F32D12]\n",
+      "\t(No symbol) [0x00007FF6D1DCEC65]\n",
+      "\t(No symbol) [0x00007FF6D1E1BB34]\n",
+      "\t(No symbol) [0x00007FF6D1E19954]\n",
+      "\t(No symbol) [0x00007FF6D1E17164]\n",
+      "\t(No symbol) [0x00007FF6D1E15EF9]\n",
+      "\t(No symbol) [0x00007FF6D1E0A708]\n",
+      "\t(No symbol) [0x00007FF6D1E36FDA]\n",
+      "\t(No symbol) [0x00007FF6D1E0A00A]\n",
+      "\t(No symbol) [0x00007FF6D1E371F0]\n",
+      "\t(No symbol) [0x00007FF6D1E53412]\n",
+      "\t(No symbol) [0x00007FF6D1E36D83]\n",
+      "\t(No symbol) [0x00007FF6D1E083A8]\n",
+      "\t(No symbol) [0x00007FF6D1E09441]\n",
+      "\tGetHandleVerifier [0x00007FF6D23C262D+4238301]\n",
+      "\tGetHandleVerifier [0x00007FF6D23FF78D+4488509]\n",
+      "\tGetHandleVerifier [0x00007FF6D23F7A6F+4456479]\n",
+      "\tGetHandleVerifier [0x00007FF6D20A0606+953270]\n",
+      "\t(No symbol) [0x00007FF6D1F3E5DF]\n",
+      "\t(No symbol) [0x00007FF6D1F392B4]\n",
+      "\t(No symbol) [0x00007FF6D1F393EB]\n",
+      "\t(No symbol) [0x00007FF6D1F29C24]\n",
+      "\tBaseThreadInitThunk [0x00007FFDD2E87344+20]\n",
+      "\tRtlUserThreadStart [0x00007FFDD41026B1+33]\n",
+      "\n",
+      "Retrying... 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DtypeWarning: Columns (20,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "DtypeWarning: Columns (20,27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "DtypeWarning: Columns (22,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "DtypeWarning: Columns (13,28) have mixed types. Specify dtype option on import or set low_memory=False.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Data updated successfully!\n"
      ]
     }
@@ -41,7 +87,7 @@
     "num_retries = 10\n",
     "for i in range(num_retries):\n",
     "    try:\n",
-    "        #update_NOAA_data()\n",
+    "        update_NOAA_data()\n",
     "        break\n",
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
@@ -50,7 +96,7 @@
     "        \n",
     "for i in range(num_retries):\n",
     "    try:\n",
-    "        #update_OM_data()\n",
+    "        update_OM_data()\n",
     "        break\n",
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
@@ -59,7 +105,7 @@
     "        \n",
     "for i in range(num_retries):\n",
     "    try:\n",
-    "        #update_WRH_data()\n",
+    "        update_WRH_data()\n",
     "        break\n",
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
@@ -68,7 +114,7 @@
     "        \n",
     "for i in range(num_retries):\n",
     "    try:\n",
-    "        #update_Solar_Soil_data()\n",
+    "        update_Solar_Soil_data()\n",
     "        break\n",
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
@@ -77,7 +123,7 @@
     "        \n",
     "for i in range(num_retries):\n",
     "    try:\n",
-    "        #update_Air_Quality_data()\n",
+    "        update_Air_Quality_data()\n",
     "        break\n",
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
@@ -89,9 +135,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DtypeWarning: Columns (20,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.25273640950521\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -104,14 +165,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50.78357950846354\n"
+      "56.207986195882164\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DtypeWarning: Columns (22,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "DtypeWarning: Columns (22,28,33,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n"
      ]
     },
@@ -119,7 +180,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83.82897694905598\n"
+      "83.8883285522461\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DtypeWarning: Columns (13,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76.98589579264323\n"
      ]
     }
    ],
@@ -134,8 +210,6 @@
     "kalshi = KalshiAPI()\n",
     "\n",
     "for city in city_info.keys():\n",
-    "    if city == 'Chicago' or city == 'Austin':\n",
-    "        continue\n",
     "    # Get paths for the city data\n",
     "    noaa_path = city_info[city]['noaa']\n",
     "    om_path = city_info[city]['om']\n",
