--- a/Common Task/report.ipynb
+++ b/Common Task/report.ipynb
@@ -858,7 +858,7 @@
    "source": [
     "# Results\n",
     "\n",
-    "Currently collecting data for the next four days, and will be using my late days to make the remaining predictions. I will update the results here."
+    "I have collected automatic trades for a some days, and the models have not performed super well on the yes contracts,however, it was generally doing well on the no contracts. Trade histories are under organized/history."
    ]
   }
  ],
